force-app/main/default/objects/Opportunity/fields/Account_Liquidity_Coverage_Deal__c.field-meta.xml
<CustomField>
    <fullName>Account_Liquidity_Coverage_Deal__c</fullName>
    <formula>Account.Liquidity_Coverage_Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Liquidity Coverage Deal</label>
    <type>Text</type>
</CustomField>