force-app/main/default/objects/Opportunity/fields/Account_Owners_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Account_Owners_Pillar__c</fullName>
    <formula>TEXT(Account.Owner.Pillar__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner&apos;s Pillar</label>
    <type>Text</type>
</CustomField>