force-app/main/default/objects/Opportunity/fields/Accounting_Impact__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Impact__c</fullName>
    <inlineHelpText>AP: Circle will incur an expense and be billed 
AR: Circle has the potential to receive payment

Reach out to Robby Burns with questions!</inlineHelpText>
    <label>Accounting Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>