force-app/main/default/objects/Opportunity/fields/Actual_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Maturity_Date__c</fullName>
    <description>legacy field</description>
    <label>Actual Maturity Date</label>
    <type>Date</type>
</CustomField>