force-app/main/default/objects/Opportunity/fields/Agreement_Term__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Term__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Length of contact/agreement</description>
    <inlineHelpText>In Months</inlineHelpText>
    <label>Agreement Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>