force-app/main/default/objects/Opportunity/fields/Amendment_Details__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Details__c</fullName>
    <description>Used to provide any additional context for Amendments</description>
    <inlineHelpText>Used to provide any additional context for Amendments</inlineHelpText>
    <label>Amendment Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>