force-app/main/default/objects/Opportunity/fields/Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Type__c</fullName>
    <label>Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>