force-app/main/default/objects/Opportunity/fields/Annualized_Max_Point_Incentive_Payout__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Max_Point_Incentive_Payout__c</fullName>
    <inlineHelpText>This can be found by referencing the pricing Matrix, max payout for the partner (furthers column to the right/last row) annualized</inlineHelpText>
    <label>Annualized Max-Point Incentive Payout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>