force-app/main/default/objects/Opportunity/fields/Annualized_Min_Point_Incentive_Payout__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Min_Point_Incentive_Payout__c</fullName>
    <label>Annualized Min-Point Incentive Payout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>