force-app/main/default/objects/Opportunity/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <formula>OR(
   AND(
      ISPICKVAL(StageName,&apos;Discover&apos;),
      OR(
         AND(
            Needs_Product_Approval__c = true,
            !ISPICKVAL(Product_Approval_Status__c,&apos;Approved&apos;)
         ),
         AND(
            Needs_Kash_Approval__c = true,
            !ISPICKVAL(Kash_Product_Approval_Status__c,&apos;Approved&apos;)
         )
      )
   ),
   AND(
      ISPICKVAL(StageName,&apos;Approvals&apos;),
      OR(
         AND(
            Needs_Compliance__c = true,
            !ISPICKVAL(Compliance_Approval_Status__c,&apos;Approved&apos;)
         ),
         AND(
            Needs_Pricing_Approval__c = true,
            !ISPICKVAL(Pricing_Approval_Status__c,&apos;Approved&apos;)
         ),
         AND(
            Needs_DRG_Approval__c = true,
            !ISPICKVAL(DRG_Approval_Status__c,&apos;Approved&apos;)
         )
      )
   ),
   AND(
      ISPICKVAL(StageName,&apos;Negotiate&apos;),
      Needs_Contract_Approval__c = true,
      !ISPICKVAL(Contract_Request_Status__c,&apos;Approved&apos;)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>