force-app/main/default/objects/Opportunity/fields/Are_We_Waiving_Network_Fees__c.field-meta.xml
<CustomField>
    <fullName>Are_We_Waiving_Network_Fees__c</fullName>
    <label>Are We Waiving Network Fees?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>