force-app/main/default/objects/Opportunity/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, the customer is on auto-renewal</description>
    <inlineHelpText>If this box is checked, the customer is on auto-renewal</inlineHelpText>
    <label>Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>