force-app/main/default/objects/Opportunity/fields/Banking_Rails__c.field-meta.xml
<CustomField>
    <fullName>Banking_Rails__c</fullName>
    <label>Banking Rails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>