force-app/main/default/objects/Opportunity/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <description>First date of billing cycle</description>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>