force-app/main/default/objects/Opportunity/fields/Bps_on_Volume_Payment__c.field-meta.xml
<CustomField>
    <fullName>Bps_on_Volume_Payment__c</fullName>
    <label>Bps on Volume Payment</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>