force-app/main/default/objects/Opportunity/fields/business_case__c.field-meta.xml
<CustomField>
    <fullName>business_case__c</fullName>
    <description>Business Case Template: https://docs.google.com/document/d/1bQexOzILM9pObaeRyERN2EqgLf3eUhmf4rSrMBSyBdY/edit#heading=h.tf8cukn8kym0</description>
    <inlineHelpText>Please paste the URL to your Business Case document.</inlineHelpText>
    <label>Business Case</label>
    <type>Url</type>
</CustomField>