force-app/main/default/objects/Opportunity/fields/Bypass_Ring_The_Gong_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Ring_The_Gong_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Ring The Gong Notifications</label>
    <type>Checkbox</type>
</CustomField>