force-app/main/default/objects/Opportunity/fields/Campaign_Amount__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Amount__c</fullName>
    <label>Campaign Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>