force-app/main/default/objects/Opportunity/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <description>Used to document the end of a marketing campaign. Applicable to Performance and Incentive campaigns.</description>
    <inlineHelpText>Please populate the end date of the customer&apos;s campaign.</inlineHelpText>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>