force-app/main/default/objects/Opportunity/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <description>Used to document the start of a marketing campaign. Applicable to Performance and Incentive campaigns.</description>
    <inlineHelpText>Please populate the start date of the customer&apos;s campaign.</inlineHelpText>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>