force-app/main/default/objects/Opportunity/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <description>Are there any headwinds or potential roadblocks?</description>
    <inlineHelpText>Are there any headwinds or potential roadblocks?</inlineHelpText>
    <label>Challenges</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>