force-app/main/default/objects/Opportunity/fields/Circle_Account__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circle Mint</label>
    <referenceTo>Circle_Account__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>