force-app/main/default/objects/Opportunity/fields/Circle_Account_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account_Opportunity__c</fullName>
    <formula>Products_Selected__c = &apos;Circle Account&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Circle Account Opportunity</label>
    <type>Checkbox</type>
</CustomField>