force-app/main/default/objects/Opportunity/fields/Circle_Custody_Tier__c.field-meta.xml
<CustomField>
    <fullName>Circle_Custody_Tier__c</fullName>
    <label>Circle Custody Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>