force-app/main/default/objects/Opportunity/fields/Circle_Customer_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Circle_Customer_ID_18__c</fullName>
    <label>Circle Customer ID 18</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>