force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Need</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Poor Qualification</fullName>
            </value>
            <value>
                <fullName>Lost Momentum</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Forced Offboard</fullName>
            </value>
            <value>
                <fullName>Risk Issues</fullName>
            </value>
            <value>
                <fullName>Regulatory or Legal issues</fullName>
            </value>
            <value>
                <fullName>Offering construct (rates and terms)</fullName>
            </value>
            <value>
                <fullName>Onboarding onto the Product was too challenging</fullName>
            </value>
            <value>
                <fullName>Appetite for investment changed</fullName>
            </value>
            <value>
                <fullName>Lead was not properly qualified</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Investor Quality</fullName>
            </value>
            <value>
                <fullName>Lack of Traction</fullName>
            </value>
            <value>
                <fullName>Legal/Regulatory</fullName>
            </value>
            <value>
                <fullName>Min Check Size</fullName>
            </value>
            <value>
                <fullName>Not Strategic</fullName>
            </value>
            <value>
                <fullName>Round Filled</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Valuations/Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>