force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_Detail__c</fullName>
    <label>Closed Lost Reason Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>