force-app/main/default/objects/Opportunity/fields/Closed_Lost_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Sub_Reason__c</fullName>
    <description>legacy field</description>
    <label>Closed Lost Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collateral level too low</fullName>
            </value>
            <value>
                <fullName>Not comfortable with borrowers and what they do to generate yield</fullName>
            </value>
            <value>
                <fullName>Not comfortable with BitGo as a custodian</fullName>
            </value>
            <value>
                <fullName>Not comfortable with Circle’s financials to mitigate losses</fullName>
            </value>
            <value>
                <fullName>Required more customized contract</fullName>
            </value>
            <value>
                <fullName>Did not understand regulatory framework</fullName>
            </value>
            <value>
                <fullName>Lack of prospectus</fullName>
            </value>
            <value>
                <fullName>Rates too low</fullName>
            </value>
            <value>
                <fullName>Lock ups too long</fullName>
            </value>
            <value>
                <fullName>Minimum too high</fullName>
            </value>
            <value>
                <fullName>KYC and unknown requirements to pass</fullName>
            </value>
            <value>
                <fullName>Wire/bank account issues</fullName>
            </value>
            <value>
                <fullName>Time to get a response took too long</fullName>
            </value>
            <value>
                <fullName>Final stakeholder not bought in because: [blank] (e.g. IPO, other requirements for capital, etc.)</fullName>
            </value>
            <value>
                <fullName>Change in market or capital needs</fullName>
            </value>
            <value>
                <fullName>Client did not understand stablecoins</fullName>
            </value>
            <value>
                <fullName>Client was looking for a B2B2C or B2B2B offering (i.e. pool investor capital, Feeder Fund, RIA)</fullName>
            </value>
            <value>
                <fullName>Client did not meet minimum investment requirements</fullName>
            </value>
            <value>
                <fullName>Business was clearly in an ineligible Jurisdiction</fullName>
            </value>
            <value>
                <fullName>It was a consumer or not an eligible business</fullName>
            </value>
            <value>
                <fullName>Covenants or other Regulatory reason does not allow them invest in USDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>