force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason__c</fullName>
    <description>legacy field</description>
    <label>Closed Won Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>