force-app/main/default/objects/Opportunity/fields/Competitor_Offering_Involved_Describe__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Offering_Involved_Describe__c</fullName>
    <description>legacy field</description>
    <label>Competitor Offering Involved?  Describe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>