force-app/main/default/objects/Opportunity/fields/Compliance_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>