force-app/main/default/objects/Opportunity/fields/Compliance_Analyst_Set__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Analyst_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Opportunity: Sales Process flow</description>
    <label>Compliance Analyst Set</label>
    <type>Checkbox</type>
</CustomField>