force-app/main/default/objects/Opportunity/fields/Compliance_Documents_Folder__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Documents_Folder__c</fullName>
    <label>Compliance Documents Folder</label>
    <type>Url</type>
</CustomField>