force-app/main/default/objects/Opportunity/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <description>Used by Compliance Analysts to document their notes.</description>
    <inlineHelpText>Used by Compliance Analysts to document their notes.</inlineHelpText>
    <label>Compliance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>