force-app/main/default/objects/Opportunity/fields/Compliance_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Outcome_Date__c</fullName>
    <label>Compliance Outcome Date</label>
    <type>Date</type>
</CustomField>