force-app/main/default/objects/Opportunity/fields/Compliance_State__c.field-meta.xml
<CustomField>
    <fullName>Compliance_State__c</fullName>
    <label>Compliance State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Risk Acceptance</fullName>
            </value>
            <value>
                <fullName>Form Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Periodic Review</fullName>
            </value>
            <value>
                <fullName>Pending AML Review</fullName>
                <label>Pending with AML</label>
            </value>
            <value>
                <fullName>Pending with BD Team</fullName>
            </value>
            <value>
                <fullName>Pending with Customer</fullName>
            </value>
            <value>
                <fullName>Pending with Legal</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>