force-app/main/default/objects/Opportunity/fields/Compliance_State_Changed_Counter__c.field-meta.xml
<CustomField>
    <fullName>Compliance_State_Changed_Counter__c</fullName>
    <label>Compliance State Changed Counter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>