force-app/main/default/objects/Opportunity/fields/Contains_EURC_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Contains_EURC_Incentive__c</fullName>
    <inlineHelpText>Does your performance incentive contain a EURC incentive matrix?</inlineHelpText>
    <label>Contains EURC Incentive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>