force-app/main/default/objects/Opportunity/fields/Contract_Approver__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesCAs</relationshipName>
    <type>Lookup</type>
</CustomField>