force-app/main/default/objects/Opportunity/fields/Contract_Draft_ETA__c.field-meta.xml
<CustomField>
    <fullName>Contract_Draft_ETA__c</fullName>
    <label>Contract Draft ETA</label>
    <type>Date</type>
</CustomField>