force-app/main/default/objects/Opportunity/fields/Contract_Draft_Status_Counter__c.field-meta.xml
<CustomField>
    <fullName>Contract_Draft_Status_Counter__c</fullName>
    <label>Contract Draft Status Counter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>