force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>The date for which a contract will end.</description>
    <inlineHelpText>The date for which a contract will end.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>