force-app/main/default/objects/Opportunity/fields/Contract_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length_Months__c</fullName>
    <description>legacy field</description>
    <label>Contract Length (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>