force-app/main/default/objects/Opportunity/fields/Contract_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Contract_Opt_Out__c</fullName>
    <description>Used by CSMs: If this is an auto-renewal contract, this is the last date on which Circle can unilaterally cancel a contract before it auto-renews. If there is no auto-renewal, this is the date the current contract expires.</description>
    <inlineHelpText>If this is an auto-renewal contract, this is the last date on which Circle can unilaterally cancel a contract before it auto-renews. If there is no auto-renewal, this is the date the current contract expires.</inlineHelpText>
    <label>Contract Opt Out</label>
    <type>Date</type>
</CustomField>