force-app/main/default/objects/Opportunity/fields/Contract_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Contract Draft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Draft Requested</fullName>
            </value>
            <value>
                <fullName>Draft - with Circle Legal</fullName>
            </value>
            <value>
                <fullName>Draft - with Circle stakeholders</fullName>
            </value>
            <value>
                <fullName>Draft - With BD</fullName>
            </value>
            <value>
                <fullName>Draft - with Customer</fullName>
            </value>
            <value>
                <fullName>Additional Revisions Requested</fullName>
            </value>
            <value>
                <fullName>Redlines - with Circle Legal</fullName>
            </value>
            <value>
                <fullName>Redlines - with Circle stakeholders</fullName>
            </value>
            <value>
                <fullName>Execution - final copy provided</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Redlines - with Customer</fullName>
                <isActive>false</isActive>
                <label>Redlines - with Customer</label>
            </value>
            <value>
                <fullName>Waiting On Approval</fullName>
                <isActive>false</isActive>
                <label>Waiting On Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>