force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The date for which a contract will go into effect.</description>
    <inlineHelpText>The date for which a contract will go into effect.</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>