force-app/main/default/objects/Opportunity/fields/Contract_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Days__c</fullName>
    <description>Calculates the contract mid-point</description>
    <formula>Contract_Start_Date__c +(Contract_End_Date__c -  Contract_Start_Date__c)/2</formula>
    <inlineHelpText>Calculates the contract mid-point</inlineHelpText>
    <label>Contract Decision Date</label>
    <type>Date</type>
</CustomField>