force-app/main/default/objects/Opportunity/fields/Core_API__c.field-meta.xml
<CustomField>
    <fullName>Core_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>legacy field</description>
    <label>Core API</label>
    <type>Checkbox</type>
</CustomField>