force-app/main/default/objects/Opportunity/fields/Could_deal_have_closed_faster_How__c.field-meta.xml
<CustomField>
    <fullName>Could_deal_have_closed_faster_How__c</fullName>
    <description>legacy field</description>
    <label>Could Deal Have Closed Faster? How?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>