force-app/main/default/objects/Opportunity/fields/Current_MeW_updated_date__c.field-meta.xml
<CustomField>
    <fullName>Current_MeW_updated_date__c</fullName>
    <label>Current MeW updated date</label>
    <type>DateTime</type>
</CustomField>